modefy css in home page with grid layout

--- a/style.css
+++ b/style.css
@@ -140,9 +140,8 @@ nav a:hover {
 }
 
 .items-row {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(auto-fit,minmax(50px, 1fr));
   gap: 50px;
   margin-bottom: 50px;
 }
