--- a/style.css
+++ b/style.css
@@ -128,9 +128,10 @@ nav a:hover {
 
 /* Popular Items Section */
 .popular-items {
-  padding: 40px 20px;
+  padding: 20px 20px;
   background-color: #f5faff;
   text-align: center;
+  
 }
 
 .popular-items h2 {
@@ -141,13 +142,16 @@ nav a:hover {
 
 .items-row {
   display: grid;
-  grid-template-columns: repeat(auto-fit,minmax(50px, 1fr));
+grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+
+
   gap: 20px;
   margin-bottom: 50px;
 }
 
 .item-card {
-  width: 150px;
+  
+  width: 100%;
   background-color: #ffffff;
   padding: 20px;
   border: 1px solid #90E0EF;
